library bugfix